# ai-study-planner

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: default.yaml  prompts.yaml
data/assistments_2009/: README.md
data/demo_academic/: linear_algebra_material.txt  regression_material.txt  syllabus.txt
evaluation/: RESULTS.md
evaluation/kt_benchmark/: data_loader.py  evaluate.py  models.py  train_models.py
evaluation/kt_benchmark/results/: bkt_seed42.pkl  dkt_seed42.pkl  eval_seed42.json  per_skill_mean_seed42.pkl  train_meta_seed42.json
evaluation/llm_components/: run_llm_evals.py
evaluation/llm_components/results/: llm_eval_seed42.json
evaluation/scheduler_comparison/: run_comparison.py
evaluation/scheduler_comparison/results/: comparison_seed42.json  qtable_seed42.json  qtable_seed42.npy
scripts/: sim_demo.py  smoke_test.py
src/: config.py  types.py
src/bkt/: __init__.py  decay.py  params.py  predictor.py
src/kg/: __init__.py  schema.py  store.py  traversal.py
src/llm/: __init__.py  anthropic_provider.py  cache.py  json_utils.py  mock_provider.py  ollama_provider.py  provider.py
src/llm/tasks/: __init__.py  explainer.py  grader.py  kg_extractor.py  parser.py  quiz_generator.py  summariser.py
src/orchestrator/: __init__.py  disruption_flow.py  session_flow.py  setup_flow.py  weekly_flow.py
src/rag/: __init__.py  chunker.py  embedder.py  focused.py  traversal.py  vectorstore.py
src/scheduler/: __init__.py  q_learning.py  replanner.py  rules.py  state.py  thompson.py
src/simulator/: __init__.py  profiles.py  runner.py  student_model.py
src/ui/: streamlit_app.py
tests/: test_bkt.py  test_cache.py  test_flows.py  test_kg.py  test_llm.py  test_rag.py  test_rules.py  test_scheduler.py  test_simulator.py
